fix white space between header and container

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -17,6 +17,10 @@ p {
   font-family: $font-content;
 }
 
+header {
+	background: white;
+}
+
 footer {
   margin: 40px 0 40px 0;
   font-size: .75rem;
