--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -3,6 +3,7 @@
 }
 
 .container {
+	padding-top: 1px;
 	background: white;
 	margin-bottom: 140px;
 }
